Fix bug of black bottom toolbar in landscape mode.

When tab grid is opened in landscape mode on iPhone, the bottom toolbar
has a black background instead of a transparent background. This is
caused by setting toolbar background to UIColor.blackColor in
TabGridBottomToolbar.hide(). This CL fixes it and doesn't affect the
tab grid transition animation.

This CL also sets the background for remote pages of tab grid in
TabGridBottomToolbar.updateLayout(), which solves another potential bug.

Bug: 920739
Change-Id: I9d84650b3a4e68796bb763fe87cb750afcd296e3
Reviewed-on: https://chromium-review.googlesource.com/c/1406809
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Yi Su <mrsuyi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623168}
Former-commit-id: 2c857442fcadb84aef4a606dad44fb5050de478b